--- a/Lapio-CV.html
+++ b/Lapio-CV.html
@@ -8,7 +8,26 @@
 </head>
 
 <body>
-  
+  <h2>Ansioluettelo</h2>
+  <p>Mikko Meikäläinen</p>
+  <p>13.13.1313</p>
+  <p>Esimekkitie 13</p>
+  <p>01313 Helsinki</p>
+  <p>Puh. 1313131313</p>
+  <p>mikko.meikalainen@hotmail.fi</p>
+  <h3>Profiili<h3>
+  <p>Valmistuin joskus jonakin.</p>
+  <h3>Työkokemus<h3>
+  <p>Vähän kaikkea</p>
+  <h3>Kielitaito<h3>
+  <p>
+  Suomi&ensp;&ensp;&ensp;&ensp;Äidinkielu<br>
+  Englanti&ensp;&ensp;Hyvä
+  </p>
+  <h3>Harrastukset<h3>
+  <p>Kaikkea vähän</p>
+  <h3>IT-taidot<h3>
+  <p>Sitä sun tätä</p>
 </body>
 
 </html>
